--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 
   <div class="text-center">
     <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://lh5.googleusercontent.com/mBf5gy8TJpo8a3Gif-aoQYFQ7-7J5YHX-wULMt4n6hPOvosTTpY_j2ua3KZ3rsZ5GIyBcUZRauxSH23poOGwPY2F-fpwXzkYiNheEmgvm0ZOIZxwsA=w1075" width="280" height="80" title="daftar" alt="tombol_daftar"></a>
+      <img src="https://lh5.googleusercontent.com/mBf5gy8TJpo8a3Gif-aoQYFQ7-7J5YHX-wULMt4n6hPOvosTTpY_j2ua3KZ3rsZ5GIyBcUZRauxSH23poOGwPY2F-fpwXzkYiNheEmgvm0ZOIZxwsA=w1075" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
   </div> <br/>
   <br/>
 
@@ -533,9 +533,28 @@
      <div class="text-center">
        <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/REY7FXbg2HO6of6a3VhNsge17NacZqhkFqZkTHoGH3oblN9Gej6hJmoToTcmo0aCXpFDfVz_tgrdah69OIR25Yvu7XNEccrxp-DQhLEdgA2oZi43Dw=w773" alt="satu-lisensi">
      </div>
-      <h5>1 Lisensi</h5>
+      <h5 style="text-align: center;">1 Lisensi</h5>
       <p style="text-align: center;">
         Untuk bergabung dengan pilihan ini, nilai investasi yang dibutuhkan adalah Rp. 350.000. Atas investasi ini Anda berhak memperoleh 1 Lisensi dan 1 paket produk. Adapun potensi bonus pasangan Anda dengan pilihan ini adalah Rp. 240.000 per hari atau Rp. 7.200.000 per bulan.
+      </p>
+     <div class="text-center">
+      <a href="https://wa.orderlink.in/no/6289674198193">
+      <img src="https://lh4.googleusercontent.com/SBPERlYBEjzGDhB9vcHClqPKF2IcBA1NuzjCYCBWVvcbXTGL_InfkjeI8A0TjW5HqdUdBxS_fw=w1175" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
+     </div> <br/>
+     <br/>
+     <div class="text-center">
+       <img class="d-block w-100 embed-responsive" src="https://lh5.googleusercontent.com/VWBGFXK8MgS8mel0Lo71TzeCmdLT3Uy4iOz5FJwDspVLxQvMOMbgY-6iOSn22SZXi5nGFr-k_706pLhzdkHujF_MFm5V2B1uGLDpeI-NVFvqdviwY2A=w773" alt="tiga-lisensi">
+     </div>
+      <h5 style="text-align: center;">3 Lisensi</h5>
+      <p style="text-align: center;">
+        Untuk bergabung dengan pilihan ini, nilai investasi yang dibutuhkan adalah Rp. 1.050.000. Atas investasi ini Anda berhak memperoleh 3 Lisensi dan 3 paket produk. Adapun potensi bonus pasangan Anda dengan pilihan ini adalah Rp. 720.000 per hari atau Rp. 21.600.000 per bulan.
+      </p>
+     <div class="text-center">
+       <img class="d-block w-100 embed-responsive" src="https://lh4.googleusercontent.com/DxgukGyaRHUcEphnv4imgS48a4XxwkUgnKYvv5atUuU1ysRAXNoGEQgYAqrC9X_gERy_5F2a-rnk2n7c31cUAlBJkMggKLLG54VEffwIX7g9fr4lF20=w974" alt="tujuh-lisensi">
+     </div>
+      <h5 style="text-align: center;">7 Lisensi</h5>
+      <p style="text-align: center;">
+        Untuk bergabung dengan pilihan ini, nilai investasi yang dibutuhkan adalah Rp. 2.450.000. Atas investasi ini Anda berhak memperoleh 7 Lisensi dan 7 paket produk. Adapun potensi bonus pasangan Anda dengan pilihan ini adalah Rp. 1.680.000 per hari atau Rp. 50.400.000 per bulan.
       </p>
   </div>
     
