--- a/index.html
+++ b/index.html
@@ -548,13 +548,28 @@
       <h5 style="text-align: center;">3 Lisensi</h5>
       <p style="text-align: center;">
         Untuk bergabung dengan pilihan ini, nilai investasi yang dibutuhkan adalah Rp. 1.050.000. Atas investasi ini Anda berhak memperoleh 3 Lisensi dan 3 paket produk. Adapun potensi bonus pasangan Anda dengan pilihan ini adalah Rp. 720.000 per hari atau Rp. 21.600.000 per bulan.
-      </p>
+      </p> <br/>
+     <br/>
      <div class="text-center">
        <img class="d-block w-100 embed-responsive" src="https://lh4.googleusercontent.com/DxgukGyaRHUcEphnv4imgS48a4XxwkUgnKYvv5atUuU1ysRAXNoGEQgYAqrC9X_gERy_5F2a-rnk2n7c31cUAlBJkMggKLLG54VEffwIX7g9fr4lF20=w974" alt="tujuh-lisensi">
      </div>
       <h5 style="text-align: center;">7 Lisensi</h5>
       <p style="text-align: center;">
         Untuk bergabung dengan pilihan ini, nilai investasi yang dibutuhkan adalah Rp. 2.450.000. Atas investasi ini Anda berhak memperoleh 7 Lisensi dan 7 paket produk. Adapun potensi bonus pasangan Anda dengan pilihan ini adalah Rp. 1.680.000 per hari atau Rp. 50.400.000 per bulan.
+      </p>
+  </div>
+
+  <div class="text-center">
+      <a href="https://wa.orderlink.in/no/6289674198193">
+      <img src="https://lh5.googleusercontent.com/rh2di3aQzq9j6x3RYr_9nYkUp0NhwalVPfat52bpcDtgjzt-xc970s7UqEDaSIi92H6vXkokgdvXdvk63tqaSlT9-T23j_3aCtqQIuYvvGDSRcDLCg=w1175" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
+  </div>
+
+  <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+      <p>
+        Bergabunglah menjadi agen MILAGROS INDONESIA. Rasakan Manfaatnya dan Jalankan Bisnisnya, Kesehatan dan Kesuksesan Besar Akan Anda Nikmati.
+      </p>
+      <p>
+        Untuk dapat melibatkan diri Anda ke dalam program “Milagros CRP”, Anda cukup mendaftarkan diri Anda satu kali saja dan keanggotaan Anda akan berlaku selamanya.
       </p>
   </div>
     
