--- a/index.html
+++ b/index.html
@@ -201,14 +201,15 @@
   <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
       <p>
         Salah satu kandungan MILAGROS yang menjadikannya sebagai sebuah produk yang fenomenal adalah Scalar Energy-nya yang tinggi dan berfungsi untuk meningkatkan level energi setiap sel dalam tubuh. 
-      </p> <br/>
+      </p>
+  </div>
+  
     <div class="text-center"> 
       <iframe width="360" height="240" src="https://youtube.com/embed/Iqla1Kd79uk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="text-center"> 
       <iframe width="360" height="240" src="https://youtube.com/embed/auG27OxO4tA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-  </div>
     
   
   <div style="background-color: #7FFFD4; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
@@ -468,7 +469,8 @@
   
   <div class="text-center"> 
     <iframe width="360" height="240" src="https://youtube.com/embed/_Z82rDEnHFI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
+  </div> <br/>
+  <br/>
   
   <div class="arrow_box"><h5 style="text-align: center">Marketing Plan MILAGROS</h5></div>
   <br/>
