--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
   <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://lh3.googleusercontent.com/P_iJ0RQITaGi2w1jG2Dgh6En9oeGVc4381-ljKYuq_OUuxi2dtATaf3_lVog846UNMCHhCWC=w371);"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://lh6.googleusercontent.com/AKHNw5y-k1KoS91yggc7RtT0oRBsdlBoMvC8Atl4MLYuG25Xcq3iGCiAbqzF3EEYBiukuTXRzEeYOFvQxjMsaDDk54kkHCLLG9E38ZgeKA_qDmknUjM=w371);"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Sertifikat Halal MUI</h2>
           <!--
@@ -389,7 +389,7 @@
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url(https://lh4.googleusercontent.com/UFK-cwxBcWdm9J0TKXvt_9cHM6SwUeEsvew-WXq_IlNPvpZlKW5A1pU1VAS9EG--XaK2DK4Ag_pAlDPl5mbfxSFpCZ-qi14_O3WvjFj-3yaLtLeBMDte=w371);"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url(https://lh4.googleusercontent.com/H-PWL16b3Scp4DUyX8h-fyNrM96rd6ARY_c5DtQ36DOldYjSZFubuNQXhXgZLYHzEXqM-T87kLdMlT8PVo6IKwZi3-EP4w8fvAXDEn1-9SmoqFtfa_4=w371);"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Hasil Uji Laboraturium</h2>
           <p class="lead mb-0">SUCOFINDO
@@ -469,7 +469,7 @@
   
   <div class="text-center"> 
     <iframe width="360" height="240" src="https://youtube.com/embed/_Z82rDEnHFI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div> <br/>
+  </div>
   <br/>
   
   <div class="arrow_box"><h5 style="text-align: center">Marketing Plan MILAGROS</h5></div>
