--- a/index.html
+++ b/index.html
@@ -607,21 +607,28 @@
   <!--    //////////////////////////// Testimonials ////////////////////////////////   -->
   <section class="testimonials text-center bg-light">
     <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
+      <h2 class="mb-5">Apa Kata Para Dokter Tentang MILAGROS?</h2>
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+            <img class="img-fluid rounded-circle mb-3" src="https://lh6.googleusercontent.com/r-_Fqz2Jl2MPiSQGiBxLqw19NxU2COswq8imxXC5hiPODYmO0vn3Dkck8fcVibphafuVdVzG=w371" alt="">
+            <h5>H. Mohammad Tsai Musayafa M.Kes, SpOT</h5>
+            <p class="font-weight-light mb-0">
+              Dokter Ahli Bedah Tulang Dan Sendi <br/>
+              “Alhamdulillah, Milagros adalah sinergi dan supporting sistem yang sangat baik bagi pasien. 
+              Air adalah kebutuhan, begitu pula milagros. Sangat bermanfaat bagi orang yang sehat maupun yang sakit, 
+              dari sejak dalam kandungan sampai usia tua. Bahkan hewan dan tumbuhan pun dapat merasakan  manfaatnya.”
+            </p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice
-              landing pages."</p>
+            <img class="img-fluid rounded-circle mb-3" src="https://lh3.googleusercontent.com/i1wL3-BI9sk6Zx9bbiyFpsFbs1K4DXf0zfU0MWEfefcF_TOStYIMMSwpeYnWNmNPmrP9PsPm=w371" alt="">
+            <h5>dr. Henny Widyastuti, M.Kes, SpAN</h5>
+            <p class="font-weight-light mb-0">
+              RS Marzuki Mahdi Bogor <br/>
+              “Milagros adalah air berkualitas yang kaya manfaat dari sumber alami berbeda dengan air yang lain. Alhamdulillah dengan menggunakan milagros untuk memenuhi kebutuhan cairan dasar pasien pasien kritis saya yang dirawat di ICU, dapat membantu penyembuhan penyakit luar biasa lebih cepat dibandingkan menggunakan air biasa. Dan bisa digunakan dengan kondisi apapun.”
+            </p>
           </div>
         </div>
         <div class="col-lg-4">
