--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
             <img class="img-fluid rounded-circle mb-3" src="https://lh6.googleusercontent.com/r-_Fqz2Jl2MPiSQGiBxLqw19NxU2COswq8imxXC5hiPODYmO0vn3Dkck8fcVibphafuVdVzG=w371" alt="">
             <h5>H. Mohammad Tsai Musayafa M.Kes, SpOT</h5>
             <p class="font-weight-light mb-0">
-              Dokter Ahli Bedah Tulang Dan Sendi <br/>
+              (Dokter Ahli Bedah Tulang Dan Sendi) <br/>
               “Alhamdulillah, Milagros adalah sinergi dan supporting sistem yang sangat baik bagi pasien. 
               Air adalah kebutuhan, begitu pula milagros. Sangat bermanfaat bagi orang yang sehat maupun yang sakit, 
               dari sejak dalam kandungan sampai usia tua. Bahkan hewan dan tumbuhan pun dapat merasakan  manfaatnya.”
@@ -626,21 +626,40 @@
             <img class="img-fluid rounded-circle mb-3" src="https://lh3.googleusercontent.com/i1wL3-BI9sk6Zx9bbiyFpsFbs1K4DXf0zfU0MWEfefcF_TOStYIMMSwpeYnWNmNPmrP9PsPm=w371" alt="">
             <h5>dr. Henny Widyastuti, M.Kes, SpAN</h5>
             <p class="font-weight-light mb-0">
-              RS Marzuki Mahdi Bogor <br/>
+              (RS Marzuki Mahdi Bogor) <br/>
               “Milagros adalah air berkualitas yang kaya manfaat dari sumber alami berbeda dengan air yang lain. Alhamdulillah dengan menggunakan milagros untuk memenuhi kebutuhan cairan dasar pasien pasien kritis saya yang dirawat di ICU, dapat membantu penyembuhan penyakit luar biasa lebih cepat dibandingkan menggunakan air biasa. Dan bisa digunakan dengan kondisi apapun.”
             </p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+            <img class="img-fluid rounded-circle mb-3" src="https://lh3.googleusercontent.com/FgEkPEwEV67E7MjulA4ODy46Stz43MnFf9hvHXbKYNSP5dhzN6FQEN1HpTy_V2gc2_J5Ddnu3i_bvLrO6bmGBbt08Xpo5JX1wPJjCOkruhYuiKXCqQ=w572" alt="">
+            <h5>dr. Usman, M.Kes, SpAN</h5>
+            <p class="font-weight-light mb-0">
+              (RS Bulukumba) <br/>
+              “Terima kasih ya Allah dengan dipertemukannya saya dengan milagros eksistensi saya sebagai dokter ahli anestesi yang bekerja di ICU dengan kasus pasien kritis dan ke-gawatdarurat-an semakin berarti. Milagros luar biasa hampir semua kasus teratasi dengan baik. Semoga semakin banyak pasien yang merasakan manfaatnya. Amin.”
+            </p>
+          </div>
+        </div>
+         <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="https://lh5.googleusercontent.com/7mfWvJT8LfHpKgtzfK7K7M07ctsVjOHDpwwUNvZ5pgy2PJm4n2L5gRlNn2XMhRzYw_y4CM2ozhzOiXOpHnO7N4gjF8PcI-qGgNFgJhEYpeXWnCHESCs=w572" alt="">
+            <h5>dr. Markus Wibowo, SpOT, MARS</h5>
+            <p class="font-weight-light mb-0">
+              (Kepala RS Salak Bogor) <br/>
+              “Milagros bukan sekedar air minum biasa untuk dikonsumsi, tetapi air yang sangat luar biasa sebagai saran penyembuhan segala macam penyakit.”
+            </p>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+      <p>
+        Segera ambil peluang ini dan dapatkan penghasilan yang anda inginkan tanpa menunggu bertahun-tahun!
+      </p>
+  </div>
 
   <!--    //////////////////////////// Call to Action ////////////////////////////////   -->
   <section class="call-to-action text-white text-center">
