--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 
   <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
       <p>
-        Segera ambil peluang ini dan dapatkan penghasilan yang anda inginkan tanpa menunggu bertahun-tahun!
+        Segera ambil peluang ini dan dapatkan penghasilan yang Anda inginkan tanpa menunggu bertahun-tahun!
       </p>
   </div>
 
@@ -667,8 +667,9 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+          <h2 class="mb-4">Hubungi Saya Sekarang Juga!</h2>
         </div>
+        <!--
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
@@ -680,6 +681,18 @@
               </div>
             </div>
           </form>
+        </div>
+        -->
+        <div class="text-center">
+          <a href="https://wa.orderlink.in/no/6289674198193">
+            <img src="https://lh5.googleusercontent.com/rh2di3aQzq9j6x3RYr_9nYkUp0NhwalVPfat52bpcDtgjzt-xc970s7UqEDaSIi92H6vXkokgdvXdvk63tqaSlT9-T23j_3aCtqQIuYvvGDSRcDLCg=w1175" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
+        </div>
+        <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+          <p>
+            Nama: Virgin Shofwa <br/>
+            Kota: Indramayu <br/>
+            WA: 089674198193
+          </p>
         </div>
       </div>
     </div>
