--- a/index.html
+++ b/index.html
@@ -661,6 +661,11 @@
       </p>
   </div>
 
+  <div class="text-center">
+      <a href="https://wa.orderlink.in/no/6289674198193">
+      <img src="https://lh5.googleusercontent.com/rh2di3aQzq9j6x3RYr_9nYkUp0NhwalVPfat52bpcDtgjzt-xc970s7UqEDaSIi92H6vXkokgdvXdvk63tqaSlT9-T23j_3aCtqQIuYvvGDSRcDLCg=w1175" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
+  </div>
+
   <!--    //////////////////////////// Call to Action ////////////////////////////////   -->
   <section class="call-to-action text-white text-center">
     <div class="overlay"></div>
@@ -683,16 +688,14 @@
           </form>
         </div>
         -->
-        <div class="text-center">
-          <a href="https://wa.orderlink.in/no/6289674198193">
-            <img src="https://lh5.googleusercontent.com/rh2di3aQzq9j6x3RYr_9nYkUp0NhwalVPfat52bpcDtgjzt-xc970s7UqEDaSIi92H6vXkokgdvXdvk63tqaSlT9-T23j_3aCtqQIuYvvGDSRcDLCg=w1175" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
-        </div>
-        <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+        <div class="col-xl-9 mx-auto">
+        <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
           <p>
             Nama: Virgin Shofwa <br/>
             Kota: Indramayu <br/>
             WA: 089674198193
           </p>
+        </div>
         </div>
       </div>
     </div>
@@ -703,7 +706,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
+     <!-- <ul class="list-inline mb-2">
             <li class="list-inline-item">
               <a href="#">About</a>
             </li>
@@ -719,8 +722,16 @@
             <li class="list-inline-item">
               <a href="#">Privacy Policy</a>
             </li>
-          </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+          </ul> -->
+          <p class="text-muted small mb-4 mb-lg-0">
+             Disclaimer: Web Promosi ini bukanlah milik official Website Perusahaan, 
+             melainkan milik member Milagros yang dibuat oleh team ahli berpengalaman untuk membantu promosi. 
+             Semua yang kami informasikan mengacu pada Web Official, 
+             jika ada perbedaan informasi maka yang menjadi acuan adalah apa yang dijelaskan pada Official Website Perusahaan. <br/>
+             <br/>
+             <u>Anda Member Produk/ Bisnis Ini? KLIK DISINI</u>
+          </p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; agenmilagros.github.io 2019. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
