--- a/index.html
+++ b/index.html
@@ -724,10 +724,10 @@
             </li>
           </ul> -->
           <p class="text-muted small mb-4 mb-lg-0">
-             Disclaimer: Web Promosi ini bukanlah milik official Website Perusahaan, 
+             <i>Disclaimer: Web Promosi ini bukanlah milik official Website Perusahaan, 
              melainkan milik member Milagros yang dibuat oleh team ahli berpengalaman untuk membantu promosi. 
              Semua yang kami informasikan mengacu pada Web Official, 
-             jika ada perbedaan informasi maka yang menjadi acuan adalah apa yang dijelaskan pada Official Website Perusahaan. <br/>
+             jika ada perbedaan informasi maka yang menjadi acuan adalah apa yang dijelaskan pada Official Website Perusahaan.</i> <br/>
              <br/>
              <u>Anda Member Produk/ Bisnis Ini? KLIK DISINI</u>
           </p>
