--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
 
       <div class="carousel-item">
-        <img class="d-block w-100 embed-responsive" src="img/carousel-2.jpg" alt="Second slide">
+        <img class="d-block w-100 embed-responsive" src="https://milagros.co.id/themes/milagros-beta1/images/splash2.png" alt="Second slide">
       </div>
 
       <div class="carousel-item">
