--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
       <li data-target="#carousel-indicators" data-slide-to="1"></li>
       <li data-target="#carousel-indicators" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner">
+    <div class="carousel-inner" background="img/carousel-2.jpg">
 
       <div class="carousel-item active">
-        <img class="d-block w-100 embed-responsive" src="img/carousel-1.jpg" alt="First slide">
+        <img class="d-block w-100 embed-responsive" src="https://milagros.co.id/themes/milagros-beta1//images/logo-milagros.png" alt="First slide">
       </div>
 
       <div class="carousel-item">
@@ -122,7 +122,7 @@
       </div>
 
       <div class="carousel-item">
-        <img class="d-block w-100 embed-responsive" src="img/carousel-3.jpg" alt="Third slide">
+        <img class="d-block w-100 embed-responsive" src="https://milagros.co.id/themes/milagros-beta1/images/splash3.png" alt="Third slide">
       </div>
 
     </div>
