--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <li data-target="#carousel-indicators" data-slide-to="1"></li>
       <li data-target="#carousel-indicators" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner" background="img/carousel-2.jpg">
+    <div class="carousel-inner" background-image="img/carousel-2.jpg">
 
       <div class="carousel-item active">
         <img class="d-block w-100 embed-responsive" src="https://milagros.co.id/themes/milagros-beta1//images/logo-milagros.png" alt="First slide">
