--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
     <div class="carousel-inner">
 
       <div class="carousel-item active">
-        <img class="d-block w-100 embed-responsive" src="https://milagros.co.id/themes/milagros-beta1//images/logo-milagros.png" alt="First slide">
+        <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/slide1.jpg" alt="First slide">
       </div>
 
       <div class="carousel-item">
-        <img class="d-block w-100 embed-responsive" src="https://milagros.co.id/themes/milagros-beta1/images/splash2.png" alt="Second slide">
+        <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/slide2.png" alt="Second slide">
       </div>
 
       <div class="carousel-item">
-        <img class="d-block w-100 embed-responsive" src="https://milagros.co.id/themes/milagros-beta1/images/splash3.png" alt="Third slide">
+        <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/slide3.png" alt="Third slide">
       </div>
 
     </div>
