--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         <div class="col-xl-9 mx-auto">
           <h5 class="mb-5">
             <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
-             MILAGROS Air Alkali Ajaib
+             MILAGROS Air Alkali Ajaib <br/>
+               <div class="text-center">
+                 <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/slide3.png" alt="milagros">
+               </div>
             </div>
           </h5>
         </div>
@@ -104,7 +107,7 @@
 
 
   <!--    ////////////////////// Carousel ///////////////////////////////   -->
-
+<!--
   <div id="carousel-indicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carousel-indicators" data-slide-to="0" class="active"></li>
@@ -136,6 +139,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+-->
   
   <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <br/>
