--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <h5 class="mb-5">
-            <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 10px; padding: 10px; text-align: center; width: auto;">
+            <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
              MILAGROS Air Alkali Ajaib <br/>
                <div class="text-center">
                  <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/slide3.png" alt="milagros">
@@ -141,7 +141,7 @@
   </div>
 -->
   
-  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+  <div style="background-color: #8b1486; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <br/>
     Selamat datang di website agen milagros...
     <br/>
@@ -159,7 +159,7 @@
     <br/>
   </div>
   
-  <div class="text-white" style="background-color: #7FFFD4; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+  <div class="text-white" style="background-color: #8b1486; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <h5>Perlu Anda ketahui…</h5>
     AIR ALKALI Sangat baik bagi tubuh <br/>
     kandungannya dapat meningkatkan kemampuan <br/>
