--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <h5 class="mb-5">
-            <div style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+            <div style="background-color: #; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
              MILAGROS Air Alkali Ajaib <br/>
+              <br/>
                <div class="text-center">
                  <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/slide3.png" alt="milagros">
                </div>
@@ -141,7 +142,7 @@
   </div>
 -->
   
-  <div style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+  <div class="text-white" style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <br/>
     Selamat datang di website agen milagros...
     <br/>
@@ -168,7 +169,7 @@
     serta menetralkan asam dalam tubuh. <br/>
   </div>
   
-  <div class="arrow_box"><h5 style="text-align: center">Simak VIDEO berikut</h5></div>
+  <div class="arrow_box"><h5 class="text-white" style="text-align: center; padding: 5px;">Simak VIDEO berikut</h5></div>
   <br/>
   <br/>
   
