--- a/index.html
+++ b/index.html
@@ -177,15 +177,15 @@
     <iframe width="360" height="240" src="https://www.youtube.com/embed/RQNBSB4_ZVI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
-  <div style="background-color: #7FFFD4; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+  <div style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <h5>MILAGROS AIR ALKALI AJAIB</h5>
   </div>
   
   <div class="text-center">
-    <img class="d-block w-100 embed-responsive" src="https://lh6.googleusercontent.com/dXOqOUwupxPVMSBOGT2W-hMYmgUDyEsfKGxT_xdT304KzsD4VCnLVdAPkBd7TYSPGribtCtmdEtFlW3r-VjeJLriaOzTPuXhQhQUeefquyU1zebCGWA=w371" alt="milagros-botol">
+    <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/milagros-botol.png" alt="milagros-botol">
   </div>
   
-    <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
+    <div style="background-color: #; border: 2px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
       MILAGROS Super Stable Alkaline dengan pH 9.8;
       Strength Anti-oxidant (-350mV); Powerful Scalar Energy;
       Ionized Mineral Organic Form (TDS 40ppm);
@@ -201,11 +201,11 @@
       dan masih banyak lagi.
   </div>
   
-  <div class="arrow_box"><h5 style="text-align: center">Sudah Tahu Efek Scalar Energy Milagros?</h5></div>
+  <div class="arrow_box"><h5 class=text-white" style="text-align: center; padding: 10px;">Sudah Tahu Efek Scalar Energy Milagros?</h5></div>
   <br/>
   <br/>
   
-  <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+  <div style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
       <p>
         Salah satu kandungan MILAGROS yang menjadikannya sebagai sebuah produk yang fenomenal adalah Scalar Energy-nya yang tinggi dan berfungsi untuk meningkatkan level energi setiap sel dalam tubuh. 
       </p>
