--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <iframe width="360" height="240" src="https://www.youtube.com/embed/RQNBSB4_ZVI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
-  <div style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+  <div class="text-white" style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <h5>MILAGROS AIR ALKALI AJAIB</h5>
   </div>
   
@@ -201,11 +201,11 @@
       dan masih banyak lagi.
   </div>
   
-  <div class="arrow_box"><h5 class=text-white" style="text-align: center; padding: 10px;">Sudah Tahu Efek Scalar Energy Milagros?</h5></div>
+  <div class="arrow_box"><h5 class="text-white" style="text-align: center; padding: 10px;">Sudah Tahu Efek Scalar Energy Milagros?</h5></div>
   <br/>
   <br/>
   
-  <div style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+  <div class="text-white" style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
       <p>
         Salah satu kandungan MILAGROS yang menjadikannya sebagai sebuah produk yang fenomenal adalah Scalar Energy-nya yang tinggi dan berfungsi untuk meningkatkan level energi setiap sel dalam tubuh. 
       </p>
