--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div>
 -->
   
-  <div class="text-white" style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+  <div class="text-white" style="background-color: #9370DB; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <br/>
     Selamat datang di website agen milagros...
     <br/>
@@ -160,7 +160,7 @@
     <br/>
   </div>
   
-  <div class="text-white" style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+  <div class="text-white" style="background-color: #9370DB; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <h5>Perlu Anda ketahui…</h5>
     AIR ALKALI Sangat baik bagi tubuh <br/>
     kandungannya dapat meningkatkan kemampuan <br/>
@@ -177,7 +177,7 @@
     <iframe width="360" height="240" src="https://www.youtube.com/embed/RQNBSB4_ZVI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
-  <div class="text-white" style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+  <div class="text-white" style="background-color: #9370DB; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <h5>MILAGROS AIR ALKALI AJAIB</h5>
   </div>
   
@@ -205,7 +205,7 @@
   <br/>
   <br/>
   
-  <div class="text-white" style="background-color: #BA55D3; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+  <div class="text-white" style="background-color: #9370DB; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
       <p>
         Salah satu kandungan MILAGROS yang menjadikannya sebagai sebuah produk yang fenomenal adalah Scalar Energy-nya yang tinggi dan berfungsi untuk meningkatkan level energi setiap sel dalam tubuh. 
       </p>
