--- a/index.html
+++ b/index.html
@@ -334,10 +334,6 @@
     </div>
   </section>
   
-  <div class="text-center">
-    <img class="d-block w-100 embed-responsive" src="https://lh5.googleusercontent.com/Rz2Jv-mIUW9jxHVOlHYSLgc0KoLL4fybinFKi5Qjcm-Jz8dKW7nHK_T6jTbtTZzLDZ_SSIv_=w371" alt="manfaat-milagros">
-  </div>
-  
   <div class="arrow_box"><h5 style="text-align: center">LEGALITAS PRODUK</h5></div>
   <br/>
   <br/>
@@ -385,7 +381,7 @@
   <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://lh6.googleusercontent.com/AKHNw5y-k1KoS91yggc7RtT0oRBsdlBoMvC8Atl4MLYuG25Xcq3iGCiAbqzF3EEYBiukuTXRzEeYOFvQxjMsaDDk54kkHCLLG9E38ZgeKA_qDmknUjM=w371);"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/mui.jpg);"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Sertifikat Halal MUI</h2>
           <!--
@@ -396,7 +392,7 @@
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url(https://lh4.googleusercontent.com/H-PWL16b3Scp4DUyX8h-fyNrM96rd6ARY_c5DtQ36DOldYjSZFubuNQXhXgZLYHzEXqM-T87kLdMlT8PVo6IKwZi3-EP4w8fvAXDEn1-9SmoqFtfa_4=w371);"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url(https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/lab.jpg);"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Hasil Uji Laboraturium</h2>
           <p class="lead mb-0">SUCOFINDO
@@ -424,7 +420,7 @@
   
   <div class="text-center">
     <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://lh4.googleusercontent.com/r8rvJfytGOJLG8KOQzD9dpTouqg_o0c7u51qyJ1RFvy9JvHPeJjQW-Zvpgn37v7CYWfFlV_9I0UBIN6AkK5Decw3xp1_1RcDgm8tswZD1QUDXQIAdR4=w773" width="200" height="45" title="daftar" alt="tombol_daftar"></a>
+      <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="200" height="45" title="daftar" alt="tombol_daftar"></a>
   </div>
   
   <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
@@ -432,7 +428,7 @@
   </div>
   
   <div class="text-center">
-    <img class="d-block w-100 embed-responsive" src="https://lh4.googleusercontent.com/lr8PnOO_s71GZoxQ-o8PabEdRKNSwHZ-KrB8SvowTQVGagw-U5u0rIW-ZyRqQBSrD_xXG039BZ8zndAU_Q3oLQep79EBev4rNbUd7VvO6fubr-AnX_Y=w1075" alt="benefit-milagros">
+    <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/benefit.jpg" alt="benefit-milagros">
   </div>
   
   <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
@@ -494,7 +490,7 @@
              dan omset RO Grup yang disponsori. Adapun syarat untuk memperoleh Bonus Jaringan adalah 
              dengan cara melakukan RO minimal 1 paket RO dan memenuhi kualifikasi omset.</p>
           <div class="text-center">
-             <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/-nB09hM1XSY5VVDAVrjKSfoCAxWDS9wQe1md4yxhlqhrKycZ0IUylT9-e9wGKx80QbIyXU_Bo1HtFOdrYEyOCB1mb2IS9K4vmwY0LkVnrE1vU3nquC0=w773" alt="bonus-jaringan">
+             <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/bonus-jaringan.png" alt="bonus-jaringan">
           </div> <br/>
           <br/>
       <li>Bonus Kepemimpinan (3%)</li>
@@ -505,7 +501,7 @@
              dengan cara melakukan RO minimal 1 paket RO dan memenuhi persyaratan yang diberlakukan 
              pada Bonus Jaringan serta memiliki side volume minimal ¼ dari syarat Bonus Jaringan.</p>
           <div class="text-center">
-             <img class="d-block w-100 embed-responsive" src="https://lh5.googleusercontent.com/sGZsCdY60vnJAHc2ORpNMqp84_PraLN655dliwvDzvLav72UpFMTXDEHbLgONBybqrIbR4e34e2WQ100hWChdUQdZ0uq8k2JIXizSNCEHdhBagl1QWE=w1075" alt="bonus-kepemimpinan">
+             <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/bonus-kepemimpinan.jpg" alt="bonus-kepemimpinan">
           </div> <br/>
           <br/>
       <li>Executive Leader (1%+0.5%)</li>
@@ -515,7 +511,7 @@
              sebesar 1% dari downline tingkat pertama yang qualified Executive Leader dan 0.5% dari downline tingkat kedua yang qualified Executive Leader 
              (dihitung berdasarkan total RO dari setiap tingkatan).
           <div class="text-center">
-             <img class="d-block w-100 embed-responsive" src="https://lh6.googleusercontent.com/EGwTkSWWRrQZALspShwJzKFRK4EZvVW8wc1yhxkDAHpNM_4HrSJITWvXBCcJ62IHM2LTsNBhwA0GpQljR3ES5cqV7l5sDuoin7aGCp3sTmL_sezq3lvN=w1175" alt="executive-leader">
+             <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/executive-leader.jpg" alt="executive-leader">
           </div> <br/>
              Total RO seorang qualified Executive Leader tidak termasuk Total RO dari downline yang juga berperingkat qualified Executive Leader. 
           </p>
@@ -523,7 +519,7 @@
           <p>Apabila Anda telah mencapai peringkat qualified Manager dan memenuhi kualifikasi yang telah ditetapkan, 
              maka Anda berhak menikmati bonus Manager sebesar 1%, 0.5%, dan 0.75%.
           <div class="text-center">
-             <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/SiO8r7eRmA8FnNGltJDU425BaTVDxJ0R0FZG2bWDJakd6arvEweNugCrg98YS3bCp73PQCyyQaToJq3VZaBtjuDo0Wdyc49tGAfpEMs3zC1xXsn1jQ=w1075" alt="manager">
+             <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/manager.jpg" alt="manager">
           </div> <br/>
              Selain menikmati penghasilan 1% dan 0.5% dari downline qualified Executive Leader tingkat pertama dan tingkat kedua 
              (seperti penghasilan yang dinikmati oleh qualified Executive Leader), qualified Manager juga memperoleh bonus sebanyak 0.75% 
@@ -533,7 +529,7 @@
           <p>Apabila Anda telah mencapai peringkat Director dan memenuhi kualifikasi yang telah ditetapkan, 
              maka Anda berhak menikmati bonus Director sebesar 1%, 0.5%, 0.75% dan 0.75%.
           <div class="text-center">
-             <img class="d-block w-100 embed-responsive" src="https://lh4.googleusercontent.com/ZZiL8pJLL4YLuitOciZNbz9sWgRc0qK4aO43QxugBQ1xiV3NhSZt6j9AHgACNSm_TTQZFGLZFCHTenjhhj8ES0_WJA3NuQvaynnTN_Ih00HjDCdRaQ=w974" alt="director">
+             <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/director.jpg" alt="director">
           </div> <br/>
              Sebagai seorang qualified Director, Anda juga berhak atas bonus Manager sebesar 0.75% dari PGRO downline qualified Executive Leader tingkat ke dua hingga satu tingkat di bawah downline Anda yang berperingkat qualified Manager.
              Seorang Director juga akan menerima bonus kepemimpinan Director sebesar 0.75% dari PGRO yang dihitung mulai dari downline qualified Executive Leader tingkat kedua hingga satu generasi di bawah downline Anda yang juga berperingkat qualified Director.
@@ -541,14 +537,14 @@
       <li>Bonus Sharing Omzet (2%)</li>
           <p>Perusahaan menganggarkan dana sebesar 2% dari total omset bulanan bagi para member yang berhasil meraih peringkat qualified Executive Leader ke atas. Adapun perincian untuk masing-masing peringkat adalah sebagai berikut:
           <div class="text-center">
-             <img class="d-block w-100 embed-responsive" src="https://lh6.googleusercontent.com/7WsaMhCZAJK2Mdse0d0FtKEBKX9MozpJkeJRCXJFndWmBzrVuZ2JPP-Wo2eJ6NJxpGboyKgVTeqoNnC-0JBDnixiQ_w1F7Fcu1x3OXC9_DoZQ8SzLD33=w773" alt="sharing-omzet">
+             <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/sharing-omzet.jpg" alt="sharing-omzet">
           </div> <br/>
              Adapun syarat untuk memperoleh Bonus Sharing Omzet adalah dengan cara melakukan RO min. 1 paket RO dan memenuhi persyaratan Omset Main Volume Minimum dan Omset Side Volume Minimum sebagaimana tertera pada tabel diatas.
           </p>
       <li>Bonus Reward (3%)</li>
           <p>Impian untuk melakukan pesiar dan memiliki mobil atau rumah baru dapat mulai Anda wujudkan pada saat Anda meraih peringkat tertentu dalam menjalankan usaha ini. Penghargaan ini diberikan secara terus menerus, bukan hanya satu kali. Perusahaan akan mengalokasikan 3% dari total omset perusahaan untuk membiayai keperluan ini.
           <div class="text-center">
-             <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/fO4f9YlveS4QUQFulocAKNYL_HXePo3BF0Sqv_xj-0HxxAQymwxK1NrZEZMKve8CVZMTjOdgIj3UrWH18O497_9t_fKEpdjeceZSJ2M64Yis3yG8bPk=w572" alt="bonus-reward">
+             <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/bonus-reward.png" alt="bonus-reward">
           </div> <br/>
              Bonus Reward untuk peringkat Leaders Club adalah paket pesiar ke luar negeri dan dibagikan setiap 3 bulan sekali. Sedangkan Bonus untuk peringkat Executive Leader ke atas adalah berupa dana kepemilikan rumah dan mobil yang dibagikan setiap 1 tahun sekali. <br/>
              <br/>
@@ -559,7 +555,7 @@
 
   <div class="text-center">
     <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://lh5.googleusercontent.com/mBf5gy8TJpo8a3Gif-aoQYFQ7-7J5YHX-wULMt4n6hPOvosTTpY_j2ua3KZ3rsZ5GIyBcUZRauxSH23poOGwPY2F-fpwXzkYiNheEmgvm0ZOIZxwsA=w1075" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
+      <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
   </div> <br/>
   <br/>
 
